--- a/README.pod
+++ b/README.pod
@@ -89,7 +89,7 @@ component will become unusable.
 
 In this document, an I<event> (unless explicitly referred to as a I<POE event>)
 is defined as a message originating from POE::Component::Syndicator, delivered
-to plugins (and subclasses) via plugin methods and to registered sessions as
+to plugins (and the subclass) via plugin methods and to registered sessions as
 POE events.
 
 Interested sessions are considered consumers only, so they always receive
