--- a/README.pod
+++ b/README.pod
@@ -312,10 +312,30 @@ its session a C<shutdown> event manually to make it delete itself.
 Terminating multiple Syndicators can be tricky. Check the L</SIGNALS> section
 for a method of doing that.
 
-=head3 Unhandled events
+=head3 C<_default>
 
 Any POE events sent to the Syndicator's session which do not have a handler
-will generate L</USER events> of the same name.
+will go to the Syndicator's C<_default> handler, will generate
+L</USER events> of the same name. If you install your own C<_default>
+handler, make sure you do the same thing before you handle an event:
+
+ use Object::Pluggable::Constants 'PLUGIN_EAT_ALL';
+
+ $poe_kernel->state('_default', $self, '__default');
+
+ sub __default {
+     my ($self, $event, $args) = @_[OBJECT, ARG0, ARG1];
+
+     # do nothing if a plugin eats the event
+     return if $self->send_user_event($event, [@$args]) == PLUGIN_EAT_ALL;
+
+     # handle the event
+     # ...
+ }
+
+Note that the handler for the C<_default> event must be named something other
+than '_default', because that name is reserved for the plugin-type default
+handler (see the L<Object::Pluggable|Object::Pluggable/PLUGINS> docs).
 
 =head2 Output events
 
