--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Component-Syndicator
 
 {{$NEXT}}
+
+0.04  Fri May 20 12:11:17 GMT 2011
     - Make it so that register/unregister without arguments are equivalent
       to passing 'all' as an argument.
 
