--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Component-Syndicator
 
 {{$NEXT}}
+    - Fix incorrect return value from delay_remove() and the
+      syndicator_delay_removed event
 
 0.04  Fri May 20 12:11:17 GMT 2011
     - Make it so that register/unregister without arguments are equivalent
